Fix namespacing

--- a/src/components/_details-list.scss
+++ b/src/components/_details-list.scss
@@ -2,7 +2,7 @@
 // Details list
 // ============
 
-.great-details-list {
+.g-details-list {
 
   details:first-child {
     border-top: 2px solid $light-grey;
