--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -7,24 +7,24 @@
 $hero-height: $space-s * 12;
 $hero-height-mobile: $space-s-m * 8;
 
-.great-hero-text {
+.g-hero-text {
   color: $white;
 }
 
-.great-hero-heading {
+.g-hero-heading {
   @include brand-large;
 }
 
-.great-hero-subheading {
+.g-hero-subheading {
   @include brand-medium;
 }
 
-.great-hero-description {
+.g-hero-description {
   margin-bottom: 0;
   font-family: $brand-font-body;
 }
 
-.great-hero {
+.g-hero {
   position: relative;
   min-height: $hero-height-mobile;
 
@@ -51,11 +51,11 @@ $hero-height-mobile: $space-s-m * 8;
   }
 }
 
-.great-hero-no-image {
+.g-hero-no-image {
   background-color: $hero-blue;
 }
 
-.great-hero-title {
+.g-hero-title {
   color: $white;
   max-width: 700px;
   background-color: $hero-blue;
@@ -79,26 +79,26 @@ $hero-height-mobile: $space-s-m * 8;
 }
 
 @media (max-width: 1100px) {
-  .great-hero-title {
+  .g-hero-title {
     max-width: 400px;
   }
 }
 
 @include tablet {
-  .great-hero,
-  .great-hero > .container {
+  .g-hero,
+  .g-hero > .container {
     min-height: $hero-height;
   }
 
-  .great-hero-title {
+  .g-hero-title {
     min-width: 470px;
   }
 }
 
 // Hero with CTA
 
-.great-hero-with-cta {
-  @extend .great-hero;
+.g-hero-with-cta {
+  @extend .g-hero;
 
   h1 {
     margin-top: 0;
@@ -118,12 +118,12 @@ $hero-height-mobile: $space-s-m * 8;
 }
 
 @media (max-width: 640px) {
-  .great-hero-with-cta {
-    .great-hero-text h2 {
+  .g-hero-with-cta {
+    .g-hero-text h2 {
       width: 70%;
     }
 
-    .great-hero-brand {
+    .g-hero-brand {
       bottom: 0;
       top: auto;
 
